fixed flash layout bugs

--- a/src/components/Flash/flash.module.scss
+++ b/src/components/Flash/flash.module.scss
@@ -61,6 +61,7 @@
       align-items: center;
       margin-right: 1rem;
       background: none !important;
+      min-width: 4.5rem;
 
       &>span {
         margin-bottom: 1rem;
